--- a/imgui.ini
+++ b/imgui.ini
@@ -8,8 +8,7 @@ Pos=60,60
 Size=116,135
 Collapsed=0
 
-[Window][My First Tool]
-Pos=189,1
-Size=336,149
-Collapsed=1
-
+[Window][Tools]
+Pos=60,60
+Size=121,121
+Collapsed=0
